make stream unparalle, use formater cache, and so on